--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>autumn-admin</title>
+    <title>水滴爱心互助平台</title>
+      <script src="./static/config.js"></script>
   </head>
   <body>
     <div id="app"></div>
