--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>水滴爱心互助平台</title>
+    <title>Autumn</title>
       <script src="./static/config.js"></script>
   </head>
   <body>
